@@ -121,8 +121,13 @@ sub new
 	if( defined $properties{dataset} ) 
 	{ 
 		$self->{confid} = $properties{dataset}->confid(); 
-		Scalar::Util::weaken($self->{dataset} = $properties{dataset});
-		Scalar::Util::weaken($self->{repository} = $properties{dataset}->get_repository);
+		$self->{dataset} = $properties{dataset};
+		$self->{repository} = $properties{dataset}->get_repository;
+		if( defined( &Scalar::Util::weaken ) )
+		{
+			Scalar::Util::weaken( $self->{dataset} );
+			Scalar::Util::weaken( $self->{repository} );
+		}
 	}
 	else
 	{
