@@ -7590,4 +7590,5 @@ EPRINTS-3.1-beta-2
 
 2008-06-23 tdb
  * If a user's field list contains an invalid field fallback gracefully
+ * Don't use Scalar::Util::weaken if the vendor didn't install it
 
